get set , Linq , serializzazione , deserializzazione

--- a/Interface Example/Interface Example.csproj
+++ b/Interface Example/Interface Example.csproj
@@ -8,4 +8,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\Desktop\Agic dynamic 365\Capitolo9\Capitolo9\bin\Debug\net6.0\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
